--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,5 @@
 # Распределенные настройки приложения для тестового задания
 some_prop=some_val
+param1=Значение номер 1
+param2=Значение номер 2
+param3=Значение номер 3
