--- a/configuration_client.properties
+++ b/configuration_client.properties
@@ -1,5 +1,5 @@
 # Распределенные настройки приложения для тестового задания
 some_prop=some_val
 param1=Значение номер 1
-param2=Значение номер 2
+param2=Значение номер два
 param3=Значение номер три
