--- a/configuration_client.properties
+++ b/configuration_client.properties
@@ -1,5 +1,6 @@
 # Распределенные настройки приложения для тестового задания
 some_prop=some_val
-param1=Значение номер раз
-param2=Значение номер два
-param3=Значение номер три
+param1=Value for parameter 1
+param2=Value for parameter 1
+param3=Value for parameter 1
+
