--- a/configuration_client.properties
+++ b/configuration_client.properties
@@ -1,6 +1,6 @@
 # Распределенные настройки приложения для тестового задания
 some_prop=some_val
-param1=Value for parameter 1 (configuration_client.properties)
+param1=Value for parameter 1
 param2=Value for parameter 1 (configuration_client.properties)
 param3=Value for parameter 1 (configuration_client.properties)
 
