--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 # Распределенные настройки приложения для тестового задания
 some_prop=some_val
-param1=Value for parameter 1
+param1=Value for parameter 1 (application.properties)
 param2=Value for parameter 1 (application.properties)
 param3=Value for parameter 1 (application.properties)
 
